--- a/fabric/src/main/resources/data/anvilcraft_fooding/recipes/crafting/wood/apple/apple_planks.json
+++ b/fabric/src/main/resources/data/anvilcraft_fooding/recipes/crafting/wood/apple/apple_planks.json
@@ -4,7 +4,7 @@
   "group": "planks",
   "ingredients": [
     {
-      "tag": "anvilcraft_fooding:apple_logs"
+      "tag": "anvilcraft_fooding:apple_log"
     }
   ],
   "result": {
